# fancy-fauna

./: .gitignore  Cargo.toml  README.md  fancy.aseprite  fancy_backup1.aseprite
src/: layers.rs  main.rs  metadata.rs  nft_trait.rs
src/layers/: animal.rs  background.rs  foreground.rs  overlay.rs
