[package]
name = "fancy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
hex = "0.4.3"
image = "0.25.5"
indexmap = "2.7.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
uuid = { version = "1.12.0", features = ["serde", "v6"] }
